[gd_scene load_steps=3 format=3 uid="uid://deilqxh4w887j"]

[ext_resource type="Theme" path="res://Assets/MainTheme.tres" id="1_un6oy"]
[ext_resource type="Script" path="res://scenes/menu/settings/actions_assignement_panel.gd" id="2_ywso3"]

[node name="ActionsAssignementPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -64.0
offset_right = 22.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_un6oy")
script = ExtResource("2_ywso3")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="C1" type="CenterContainer" parent="MC/VB"]
layout_mode = 2

[node name="CurrentActionLabel" type="Label" parent="MC/VB/C1"]
layout_mode = 2

[node name="C2" type="CenterContainer" parent="MC/VB"]
layout_mode = 2

[node name="CurrentInputLabel" type="Label" parent="MC/VB/C2"]
layout_mode = 2

[node name="C3" type="CenterContainer" parent="MC/VB"]
layout_mode = 2

[node name="Ok" type="Button" parent="MC/VB/C3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ok"

[node name="C4" type="CenterContainer" parent="MC/VB"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="MC/VB/C4"]
modulate = Color(0.901961, 0.176471, 0.419608, 1)
layout_mode = 2
